--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -1,10 +1,11 @@
 # 
 # Home Assistant Automation Blueprint
 #
-# Sends two notifications to close a window or door after opening it, 
+# Sends three notifications to close a window or door after opening it, to two devices
 # if the temperature outside is below a certain degree. 
 #
-# Revision 2
+# Revision 3
+# Modified by Johan Schelin, original by
 # Roozbeh Farahbod, Jan. 2021
 #
 
@@ -59,15 +60,22 @@ blueprint:
           step: 1
           max: 25
           mode: slider
-    device_identifier:
-      name: Device to notify
+    first_device_identifier:
+      name: 'Device #1 to notify'
       description: >
         The device to receive the notification; it needs to run the official 
         Home Assistant app to receive notifications.
       selector: 
         device:
           integration: mobile_app
-
+    second_device_identifier:
+      name: 'Device #2 to notify'
+      description: >
+        The device to receive the notification; it needs to run the official 
+        Home Assistant app to receive notifications.
+      selector: 
+        device:
+          integration: mobile_app
 # We will have two triggers, for the two different reminders. 
 # However, a reminder will be ignored if the door or window is already closed by then. 
 trigger:
@@ -110,7 +118,12 @@ condition:
 
 # Send a notification to the mobile device. 
 action:
-- device_id: !input device_identifier
+- device_id: !input first_device_identifier
+  domain: mobile_app
+  type: notify
+  message: 'Time to close {{trigger.to_state.attributes.friendly_name}}.'
+  title: 'Close {{trigger.to_state.attributes.friendly_name}}!'
+- device_id: !input second_device_identifier
   domain: mobile_app
   type: notify
   message: 'Time to close {{trigger.to_state.attributes.friendly_name}}.'
