--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -1,11 +1,11 @@
 # 
 # Home Assistant Automation Blueprint
 #
-# Sends two notifications to close a window or door after opening it, 
+# Sends multiple notifications to multiple devices to close a window or door after opening it, 
 # if the temperature outside is below a certain degree. 
 #
-# Revision 2
-# Roozbeh Farahbod, Jan. 2021
+# Revision 4
+# Modified by Johan Schelin, Mar. 2021
 #
 
 blueprint:
