--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -9,8 +9,8 @@
 #
 
 blueprint:
-  name: Notification to Close a Window 
-  description: Notification to close windows if it is cold outside
+  name: Notification to Close a Window or Door
+  description: Notification to close Windows/Doors if it is cold outside
   domain: automation
   input: 
     contact_sensor: 
