--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -14,7 +14,7 @@ blueprint:
   domain: automation
   input: 
     contact_sensor: 
-      name: Contact Sensor
+      name: Door/Window Sensor
       description: 'The window or door sensor that triggers the automation.'
       selector: 
         entity:
