--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -4,7 +4,7 @@
 # Sends multiple notifications to multiple devices to close a window or door after opening it, 
 # if the temperature outside is below a certain degree. 
 #
-# Revision 5
+# Revision 6
 # Modified by Johan Schelin, Mar. 2021
 #
 
@@ -77,30 +77,30 @@ blueprint:
   # We will have two triggers, for the two different reminders. 
   # However, a reminder will be ignored if the door or window is already closed by then. 
 trigger:
-  - platform: state
-    entity_id: !input contact_sensor
-    from: 'off'
-    to: 'on'
-    for:
-      hours: 0
-      minutes: !input first_timer
-      seconds: 0
-  - platform: state
-    entity_id: !input contact_sensor
-    from: 'off'
-    to: 'on'
-    for:
-      hours: 0
-      minutes: !input second_timer
-      seconds: 0
-  - platform: state
-    entity_id: !input contact_sensor
-    from: 'off'
-    to: 'on'
-    for:
-    hours: !input third_timer
-    minutes: 0
+  platform: state
+  entity_id: !input contact_sensor
+  from: 'off'
+  to: 'on'
+  for:
+    hours: 0
+    minutes: !input first_timer
     seconds: 0
+  platform: state
+  entity_id: !input contact_sensor
+  from: 'off'
+  to: 'on'
+  for:
+    hours: 0
+    minutes: !input second_timer
+    seconds: 0
+  platform: state
+  entity_id: !input contact_sensor
+  from: 'off'
+  to: 'on'
+  for:
+  hours: !input third_timer
+  minutes: 0
+  seconds: 0
 
 # Two conditions:
 # 1. The door or window should still be open. 
