--- a/SyncStatesFour.yml
+++ b/SyncStatesFour.yml
@@ -3,7 +3,7 @@
 #
 # Synchronize on/off states on multiple devices
 #
-# Revision 2
+# Revision 3 with single mode and delay
 # Modified by Johan Schelin, Mar. 2021
 #
 
