--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -4,7 +4,7 @@
 # Sends multiple notifications to multiple devices to close a window or door after opening it, 
 # if the temperature outside is below a certain degree. 
 #
-# Revision 6
+# Revision 7
 # Modified by Johan Schelin, Mar. 2021
 #
 
@@ -18,6 +18,7 @@ blueprint:
       description: 'The window or door sensor that triggers the automation.'
       selector: 
         entity:
+          domain: binary_sensor
     first_timer:
       name: 'First timer'
       description: 'The first notification timer (in minutes).'
@@ -74,10 +75,11 @@ blueprint:
       selector: 
         device:
           integration: mobile_app
+
   # We will have two triggers, for the two different reminders. 
   # However, a reminder will be ignored if the door or window is already closed by then. 
 trigger:
-  platform: state
+- platform: state
   entity_id: !input contact_sensor
   from: 'off'
   to: 'on'
@@ -85,7 +87,7 @@ trigger:
     hours: 0
     minutes: !input first_timer
     seconds: 0
-  platform: state
+- platform: state
   entity_id: !input contact_sensor
   from: 'off'
   to: 'on'
@@ -93,7 +95,7 @@ trigger:
     hours: 0
     minutes: !input second_timer
     seconds: 0
-  platform: state
+- platform: state
   entity_id: !input contact_sensor
   from: 'off'
   to: 'on'
