--- a/WindowOpenBlueprint.yml
+++ b/WindowOpenBlueprint.yml
@@ -4,7 +4,7 @@
 # Sends multiple notifications to multiple devices to close a window or door after opening it, 
 # if the temperature outside is below a certain degree. 
 #
-# Revision 7.1
+# Revision 7.2
 # Modified by Johan Schelin, Mar. 2021
 #
 
@@ -80,15 +80,15 @@ blueprint:
   # However, a reminder will be ignored if the door or window is already closed by then. 
 trigger:
 - platform: state
-  entity_id: !input contact_sensor
+  entity_id: !input 'contact_sensor'
   from: 'off'
   to: 'on'
   for:
     hours: 0
-    minutes: '!input first_timer'
+    minutes: !input 'first_timer'
     seconds: 0
 - platform: state
-  entity_id: !input contact_sensor
+  entity_id: !input 'contact_sensor'
   from: 'off'
   to: 'on'
   for:
@@ -96,7 +96,7 @@ trigger:
     minutes: !input 'second_timer'
     seconds: 0
 - platform: state
-  entity_id: !input contact_sensor
+  entity_id: !input 'contact_sensor'
   from: 'off'
   to: 'on'
   for:
