--- a/SyncStatesFour.yml
+++ b/SyncStatesFour.yml
@@ -1,37 +1,35 @@
 # 
 # Home Assistant Automation Blueprint
 #
-# Synchronize on/off states on multiple devices
+# Synchronize on/off states on four devices
 #
-# Revision 1
+# Revision 1.0
 # Modified by Johan Schelin, Mar. 2021
 #
 
 blueprint:
   name: Synchronize Four States
-  description: Bind four entities together to act in unison (selected entites must all support the same state values)
+  description: Bind four entities together to act in unison (selected entites must
+    all support the same state values)
   domain: automation
   input:
     switch_1:
       name: Entity 1
       selector:
-        entity:
-          #domain: switch          
+        entity: {}
     switch_2:
       name: Entity 2
       selector:
-        entity:
-          #domain: switch
+        entity: {}
     switch_3:
       name: Entity 3
       selector:
-        entity:
-          #domain: switch
+        entity: {}
     switch_4:
       name: Entity 4
       selector:
-        entity:
-          #domain: switch
+        entity: {}
+  source_url: https://github.com/johanschelin/ha_blueprints/blob/main/SyncStatesFour.yml
 mode: restart
 max_exceeded: silent
 variables:
@@ -40,18 +38,21 @@ variables:
   switch_3: !input 'switch_3'
   switch_4: !input 'switch_4'
 trigger:
-  - platform: state
-    entity_id: !input 'switch_1'
-  - platform: state
-    entity_id: !input 'switch_2'
-  - platform: state
-    entity_id: !input 'switch_3'  
-  - platform: state
-    entity_id: !input 'switch_4'  
+- platform: state
+  entity_id: !input 'switch_1'
+- platform: state
+  entity_id: !input 'switch_2'
+- platform: state
+  entity_id: !input 'switch_3'
+- platform: state
+  entity_id: !input 'switch_4'
 action:
-  service:  homeassistant.turn_{{ trigger.to_state.state }}
-  entity_id:
-    - '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_2 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_1 }} {% elif trigger.from_state.entity_id == switch_3 %} {{ switch_1 }} {% else %}  {{ switch_1 }}'
-    - '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_3 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_3 }} {% elif trigger.from_state.entity_id == switch_3 %} {{ switch_2 }} {% else %}  {{ switch_2 }}'
-    - '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_4 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_4 }} {% elif trigger.from_state.entity_id == switch_3 %} {{ switch_4 }} {% else %}  {{ switch_3 }}'
-  
+  - service: homeassistant.turn_{{ trigger.to_state.state }}
+    data:
+      entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_2 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_1 }} {% elif trigger.from_state.entity_id == switch_3 %} {{ switch_1 }} {% else %}  {{ switch_1 }}  {% endif %}'
+  - service: homeassistant.turn_{{ trigger.to_state.state }}
+    data:
+      entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_3 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_3 }} {% elif trigger.from_state.entity_id == switch_3 %} {{ switch_2 }} {% else %}  {{ switch_2 }}  {% endif %}'
+  - service: homeassistant.turn_{{ trigger.to_state.state }}
+    data:
+      entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_4 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_4 }} {% elif trigger.from_state.entity_id == switch_3 %} {{ switch_4 }} {% else %}  {{ switch_3 }}  {% endif %}'
