--- a/SyncStatesThree.yml
+++ b/SyncStatesThree.yml
@@ -3,41 +3,45 @@
 #
 # Synchronize on/off states on three devices
 #
-# Revision 2
+# Revision 1.0
 # Modified by Johan Schelin, Mar. 2021
 #
 
 blueprint:
-  name: Synchronize Three States
+  name: Synchronize Four States
   description: Bind three entities together to act in unison (selected entites must all support the same state values)
   domain: automation
   input:
     switch_1:
       name: Entity 1
       selector:
-        entity:
-          #domain: switch          
+        entity: {}
     switch_2:
       name: Entity 2
       selector:
-        entity:
-          #domain: switch
+        entity: {}
     switch_3:
       name: Entity 3
       selector:
-        entity:
-          #domain: switch
+        entity: {}
+  source_url: https://github.com/johanschelin/ha_blueprints/blob/main/SyncStatesThree.yml
+mode: restart
+max_exceeded: silent
+variables:
+  switch_1: !input 'switch_1'
+  switch_2: !input 'switch_2'
+  switch_3: !input 'switch_3'
 trigger:
-  - entity_id:
-    - !input switch_1
-    - !input switch_2
-    - !input switch_3
-    platform: state
+- platform: state
+  entity_id: !input 'switch_1'
+- platform: state
+  entity_id: !input 'switch_2'
+- platform: state
+  entity_id: !input 'switch_3'
 action:
-- entity_id:
-  - !input switch_1
-  - !input switch_2
-  - !input switch_3
-  service: 'homeassistant.turn_{{ trigger.to_state.state }}'
-
-  mode: single
+  - service: homeassistant.turn_{{ trigger.to_state.state }}
+    data:
+      entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_2 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_1 }} {% else %} {{ switch_1 }} {% endif %}'
+  - service: homeassistant.turn_{{ trigger.to_state.state }}
+    data:
+      entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_3 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_3 }} {% else %} {{ switch_2 }} {% endif %}'
