added delay 5s and changed to singel mode

--- a/SyncStatesThree.yml
+++ b/SyncStatesThree.yml
@@ -3,7 +3,7 @@
 #
 # Synchronize on/off states on three devices
 #
-# Revision 1.1
+# Revision 1.2 - Added delay and changed to single mode to prevent loop
 # Modified by Johan Schelin, Mar. 2021
 #
 
@@ -25,7 +25,7 @@ blueprint:
       selector:
         entity: {}
   source_url: https://github.com/johanschelin/ha_blueprints/blob/main/SyncStatesThree.yml
-mode: restart
+mode: single
 max_exceeded: silent
 variables:
   switch_1: !input 'switch_1'
@@ -45,3 +45,8 @@ action:
   - service: homeassistant.turn_{{ trigger.to_state.state }}
     data:
       entity_id: '{% if trigger.from_state.entity_id == switch_1 %} {{ switch_3 }} {% elif trigger.from_state.entity_id == switch_2 %} {{ switch_3 }} {% else %} {{ switch_2 }} {% endif %}'
+  - delay:
+      hours: 0
+      minutes: 0
+      seconds: 5
+      milliseconds: 0
