--- a/SyncStatesFour.yml
+++ b/SyncStatesFour.yml
@@ -3,14 +3,14 @@
 #
 # Synchronize on/off states on four devices
 #
-# Revision 1.1 - Added delay and changed to single mode to prevent loop
-# Modified by Johan Schelin, Mar. 2021
+# Revision 1.3 - Added condition to handle unavailable states
+# Modified by Johan Schelin, Apr. 2021
 #
 
 blueprint:
   name: Synchronize Four States
   description: Bind four entities together to act in unison (selected entites must
-    all support the same state values)
+    all support the same state values). In this version restricted to on/off
   domain: automation
   input:
     switch_1:
@@ -23,10 +23,12 @@ blueprint:
         entity: {}
     switch_3:
       name: Entity 3
+      default:
       selector:
         entity: {}
     switch_4:
       name: Entity 4
+      default:
       selector:
         entity: {}
   source_url: https://github.com/johanschelin/ha_blueprints/blob/main/SyncStatesFour.yml
@@ -39,13 +41,23 @@ variables:
   switch_4: !input 'switch_4'
 trigger:
 - platform: state
-  entity_id: !input 'switch_1'
-- platform: state
-  entity_id: !input 'switch_2'
-- platform: state
-  entity_id: !input 'switch_3'
-- platform: state
-  entity_id: !input 'switch_4'
+  entity_id: 
+    - !input 'switch_1'
+    - !input 'switch_2'
+    - !input 'switch_3'
+    - !input 'switch_4'
+  from:
+    - 'on'
+    - 'off'
+condition:
+- condition: template
+  value_template: '{{ states(entity_1) != ''unavailable'' }}'
+- condition: template
+  value_template: '{{ states(entity_2) != ''unavailable'' }}'
+- condition: template
+  value_template: '{{ states(entity_3) != ''unavailable'' }}'
+- condition: template
+  value_template: '{{ states(entity_4) != ''unavailable'' }}'
 action:
   - service: homeassistant.turn_{{ trigger.to_state.state }}
     data:
