--- a/SyncStates-2.yaml
+++ b/SyncStates-2.yaml
@@ -23,7 +23,7 @@ blueprint:
       description: Mandatory - The second entity to keep in sync.
       selector:
         entity: {}
-  source_url: https://github.com/johanschelin/ha_blueprints/blob/main/SyncStatesThree.yml
+  source_url: https://github.com/johanschelin/ha_blueprints/edit/main/SyncStates-2
 mode: restart
 max_exceeded: silent
 variables:
